metadata/objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Attended_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attended Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GuestOf__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guest Of</label>
        <referenceTo>Attendee__c</referenceTo>
        <relationshipLabel>Guest Of</relationshipLabel>
        <relationshipName>GuestOf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_In__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PD_Connection__c</fullName>
        <label>PD Connection</label>
        <picklist>
            <picklistValues>
                <fullName>I have Parkinson&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Family Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Friend</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>